syntax = "proto3";

package authservice;

option go_package = "AdsService/authservice/proto;authservice";

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc AssignRole (AssignRoleRequest) returns (AssignRoleResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);

  rpc RefreshToken (RefreshRequest) returns (AuthResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool   valid = 1;
  uint64 user_id = 2;
}

message RefreshRequest {
  string refresh_token = 1;
}

message AssignRoleRequest {
  uint64 user_id = 1;
}

message AssignRoleResponse {
  bool ok = 1;
}

message GetUserRequest {
  uint64 user_id = 1;
}

message GetUserResponse {
  uint64 user_id  = 1;
  string email    = 2;
  string role     = 3;
}
